app/nginx_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - port: 443
      targetPort: 80
      protocol: TCP

  type: ClusterIP
