app/nginx_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - staging.prism.nasa-impact.net
    secretName: ingress-tls
  rules:
  - host: staging.prism.nasa-impact.net 
    http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nginx-service
              port:
                number: 443
